--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -152,6 +152,13 @@ p {
     z-index: 2;
 }
 
+.button-1:hover {
+    box-shadow: 0px 0px 0 #D7008A;
+    background: #D7008A;
+    color: white !important;
+    border: var(--spacing-2, 2px) solid var(--Text-text-primary, #D7008A)
+}
+
 
 
 .btn-style-1 {
