--- a/assets/scss/components/header/_eman.scss
+++ b/assets/scss/components/header/_eman.scss
@@ -1230,9 +1230,10 @@ select {
         right: 1rem !important;
     }
 
-    .text-3 {
-        width: unset !important;
-    }
+ .contact-info{
+    border-top-left-radius: unset !important; 
+     border-bottom-left-radius: unset !important;
+ }
 
     .container {
         padding-right: 25px !important;
@@ -1247,18 +1248,47 @@ select {
 
 
 
-    img {
-        margin-top: 2rem;
+    // img {
+    //     margin-top: 2rem;
+    // }
+    .slider-item-1-card{
+        width: 80%;
+        margin: auto;
+        padding: 0.7rem 0.8rem;
+      
     }
-
     .block {
         max-width: 100%;
     }
-
+    .slider-item-1-card p{
+        font-size: 1rem !important;
+    }
     .KeyBenefits img {
         display: none;
     }
-
+    .highlights img{
+        margin-top: 2rem;
+        margin-bottom: 1rem;
+    }
+    #aboutus-slider-2 .swiper-button-next-swiper-testimonoals{
+        right: 0 !important;
+    }
+    #aboutus-slider-2 .swiper-button{
+        left: unset !important;
+    }
+    .dropdown-item {
+        font-size: 1.8rem !important;
+        text-align: center;
+    }
+    .dropdown-toggle:hover{
+        margin-bottom: 0rem !important;
+    }
+    .home-blk-3-content img{
+        margin-top: 1rem;
+    }
+.main-slide{
+    margin-top: 2rem;
+}
     .highlights .block-2 {
         display: unset !important;
     }
@@ -1278,13 +1308,42 @@ select {
 
     .heading-2 {
         font-size: 2rem !important;
-        line-height: unset !important;
+        line-height: 1.2 !important;
     }
 
     .welcome .heading-6 {
         padding: unset !important;
     }
-
+    .payment-gateway span img {
+        max-width: 50% !important;
+    }
+    .methods{
+        margin-bottom: 2rem;
+    font-size: 2rem;
+    }
+    .business img{
+        margin-top: 2rem;
+    }
+    .numbering{
+        padding-top: 1rem;
+        margin: auto;
+    }
+    .salary{
+        text-align: center;
+    }
+    .icon-2{
+        padding: unset !important;
+    }
+    .salary .share{
+        text-align: left !important;
+    }
+    .salary img{
+        width: unset !important;
+        margin-top: 1rem;
+    }
+    .job-detail{
+        margin-left: unset !important;
+    }
     .map {
         width: unset !important;
     }
@@ -1300,8 +1359,17 @@ select {
     .block-3 {
         max-width: unset !important;
         flex: unset !important;
+        width: 100%;
     }
-
+.firstimage img{
+    margin-top: 3rem;
+}
+.apply-now .job-det, .apply-now .heading-4 {
+    margin-left: -5px !important;
+}
+.business .journey{
+    padding-top: 0rem !important;
+}
     .salary .fa-map-marker-alt {
         padding-top: 1rem;
     }
@@ -1381,13 +1449,18 @@ select {
 
     .heading-8 {
         font-size: 4rem !important;
-        line-height: unset !important;
+        line-height: 1 !important;
     }
 
     .mockupimage {
         display: none;
     }
-
+    .heading-6{
+        padding: unset !important;
+    }
+.BigText{
+    padding-bottom: unset !important;
+}
     .manageagreements img {
         margin-left: unset !important;
         margin-top: unset !important;
@@ -1407,6 +1480,9 @@ select {
     html,
     body {
         font-size: 14px;
+    }
+    .image-10{
+        display: none;
     }
 }
 
